Prevent hero title wrapping

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -96,6 +96,8 @@ a {
   line-height: 1.1;
   font-weight: 500;
   text-transform: lowercase;
+  white-space: nowrap;
+  flex-shrink: 0;
 }
 
 .landing__controls {
